--- a/styles/index.css
+++ b/styles/index.css
@@ -88,6 +88,11 @@ body {
   border: 2px dashed rgba(0, 0, 0, 0.25);
 }
 
+.zone-1.active,
+.zone-2.active {
+  border-color: rgb(229, 232, 80);
+}
+
 .zone-1 {
   bottom: 5px;
 }
